<resources>
    <string name="app_name" translatable="false">星火英语</string>

    <string name="fans" translatable="false">粉丝</string>
    <string name="attention" translatable="false">关注</string>
    <string name="circle" translatable="false">圈子</string>
    <string name="answer_post" translatable="false">问答/帖子</string>
    <string name="feedback" translatable="false">反馈意见</string>
    <string name="settings" translatable="false">设置</string>
    <string name="voucher" translatable="false">优惠券</string>
    <string name="my_order" translatable="false">我的订单</string>
    <string name="my_collection" translatable="false">我的收藏</string>
    <string name="title_activity_user" translatable="false">编辑资料</string>
    <string name="avatar" translatable="false">头像</string>
    <string name="nickname" translatable="false">昵称</string>
    <string name="age" translatable="false">年龄</string>
    <string name="choose" translatable="false">请选择</string>
    <string name="sex" translatable="false">性别</string>
    <string name="bind_phone" translatable="false">手机</string>
    <string name="grade" translatable="false">学段</string>
    <string name="harvest_address" translatable="false">收货地址</string>
    <string name="add_alter" translatable="false">添加/修改</string>
    <string name="signature" translatable="false">个性签名</string>
    <string name="sign_out" translatable="false">退出登录</string>
    <string name="answer" translatable="false">问答</string>
    <string name="post" translatable="false">帖子</string>
    <string name="title_activity_circle" translatable="false">我关注的圈子</string>
    <string name="title_activity_people" translatable="false">我关注的人</string>
    <string name="title_activity_fans" translatable="false">我的粉丝</string>
    <string name="title_activity_collection" translatable="false">我的收藏</string>
    <string name="information" translatable="false">资讯</string>
    <string name="title_activity_order" translatable="false">我的订单</string>
    <string name="all" translatable="false">全部</string>
    <string name="pending_payment" translatable="false">待付款</string>
    <string name="be_evaluated" translatable="false">待评价</string>
    <string name="title_activity_pending_payment" translatable="false">待付款</string>
    <string name="total_price" translatable="false">总价</string>
    <string name="offer" translatable="false">优惠</string>
    <string name="real_price" translatable="false">实付款</string>
    <string name="cancel_order" translatable="false">取消订单</string>
    <string name="go_to_pay" translatable="false">去支付</string>
    <string name="title_activity_payment_order" translatable="false">支付订单</string>
    <string name="RMB" translatable="false">¥</string>
    <string name="payment_method" translatable="false">选择支付方式</string>
    <string name="ali_pay" translatable="false">支付宝支付</string>
    <string name="we_chat_pay" translatable="false">微信支付</string>
    <string name="confirm_payment" translatable="false">确认支付</string>
    <string name="title_activity_payment_succ" translatable="false">" "</string>
    <string name="payment_success" translatable="false">支付成功</string>
    <string name="title_activity_coupon" translatable="false">优惠</string>
    <string name="unused" translatable="false">未使用</string>
    <string name="used" translatable="false">已使用</string>
    <string name="expired" translatable="false">已过期</string>
    <string name="exchange" translatable="false">兑换</string>
    <string name="please_enter_the_redemption_code" translatable="false">请输入兑换码</string>
    <string name="title_activity_feedback" translatable="false">意见与反馈</string>
    <string name="submit" translatable="false">提交</string>
    <string name="title_activity_setting" translatable="false">设置</string>
    <string name="change_password" translatable="false">修改密码</string>
    <string name="current_version" translatable="false">当前版本</string>
    <string name="clear_cache" translatable="false">清理缓存</string>
    <string name="invite_friends" translatable="false">邀请好友</string>
    <string name="seek_praise" translatable="false">求好评</string>
    <string name="about_us" translatable="false">关于我们</string>
    <string name="title_activity_homepage" translatable="false">个人主页</string>
    <string name="report" translatable="false">举报</string>
    <string name="go_to_commit" translatable="false">去评论</string>
    <string name="delete_order" translatable="false">删除订单</string>
    <string name="ask" translatable="false">提问</string>
    <string name="title_activity_ask" translatable="false">提问</string>
    <string name="release" translatable="false">发布</string>
    <string name="belong_book" translatable="false">所属图书</string>
    <string name="ask_class" translatable="false">问题分类</string>
    <string name="title_activity_post" translatable="false">帖子详情</string>
    <string name="title_activity_login" translatable="false">登录</string>
    <string name="register" translatable="false">注册</string>
    <string name="title_activity_register" translatable="false">手机号注册</string>
    <string name="title_activity_change_password" translatable="false">修改密码</string>
    <string name="title_activity_change_phone" translatable="false">绑定手机号</string>
    <string name="title_activity_recover_password" translatable="false">找回密码</string>
    <string name="complete" translatable="false">完成</string>
    <string name="title_activity_message" translatable="false">消息</string>
    <string name="message" translatable="false">消息</string>
    <string name="notice" translatable="false">通知</string>
    <string name="title_activity_message_details" translatable="false">消息详情</string>
    <string name="title_activity_notice_details" translatable="false">通知详情</string>
    <string name="birthday" translatable="false">生日</string>
    <string name="title_activity_grade" translatable="false">选择年级</string>
    <string name="determine" translatable="false">确定</string>
    <string name="title_activity_change_sign" translatable="false">个性签名</string>
    <string name="save" translatable="false">保存</string>
    <string name="title_activity_change_nickname" translatable="false">昵称</string>
    <string name="cancel" translatable="false">取消</string>
    <string name="title_activity_net_lessons" translatable="false">网课详情</string>
    <string name="detail" translatable="false">详情</string>
    <string name="list" translatable="false">目录</string>
    <string name="related_web_courses" translatable="false">相关网课</string>
    <string name="introduction" translatable="false">课程简介</string>
    <string name="title_activity_confirm_order" translatable="false">确认订单</string>
    <string name="total" translatable="false">合计</string>
    <string name="title_activity_coupon_detail" translatable="false">优惠券详情</string>
    <string name="title_activity_cg_practice" translatable="false">闯关练习</string>
    <string name="title_activity_order_comment" translatable="false">评论</string>
    <string name="title_activity_about" translatable="false">关于我们</string>
    <string name="app_about" translatable="false">\u3000\u3000山东星火教育科技集团股份有限公司推出的“巅峰训练App”专为学生设计，以测评为入口，提供资源下载、在线测试、知识问答、在线网课等一系列解决方案。“巅峰训练App”带你开启个性化智能学习之旅。</string>
    <string name="app_about_1" translatable="false">Copyright © 2022 All Rights Reserved\n山东星火教育科技集团股份有限公司</string>
    <string name="record" translatable="false">练习记录</string>
    <string name="next" translatable="false">下一步</string>
    <string name="mine_order" translatable="false">我的订单</string>
    <string name="mine_offline" translatable="false">离线中心</string>
    <string name="mine_collection" translatable="false">我的收藏</string>
    <string name="mine_address" translatable="false">收货地址</string>
    <string name="mine_wrong" translatable="false">错题本</string>
    <string name="mine_coupon" translatable="false">优惠券</string>
    <string name="exam_time" translatable="false">考试倒计时</string>
    <string name="mine_online" translatable="false">在线咨询</string>
    <string name="mine_service" translatable="false">客服热线</string>
    <string name="j_pickerview_cancel" translatable="false">取消</string>
    <string name="j_pickerview_submit" translatable="false">确定</string>
    <!-- : Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="agreement" translatable="false">请充分阅读并理解《用户服务协议》和《隐私政策》\n1、在仅浏览时，为保障服务所需，我们会申请系统权限手机设备信息、日志信息和安全风控。\n2、为保证提供的在线直播课程、在线录播课程下载、课程资料/音频等服务的正常使用，我们可能会在对应服务申请存储权限，用于下载课程内容及缓存课程课件、音频、课程视频等相关文件，该权限均不会默认开启，只有服务使用时经过明示授权才会实现功能使用，您均可拒绝且不影响您继续使用星火英语其他服务。\n3、为了保证提供的扫码学习、在线客服、用户头像等服务正常使用，我们可能会在对应服务申请摄像头、麦克风、相册等权限。该权限均不会默认开启，只有服务使用时经过明示授权才会实现功能使用，您均可拒绝且不影响您继续使用星火英语其他服务。\n4、我们尊重您的选择权，如果您不希望使用以上权限，可以在系统设置中随时关闭。</string>
    <string name="un_register" translatable="false"><Data><![CDATA[注销账号后，星火英语APP、巅峰训练APP、Spark网课小程序中，您的账号及个人资料会被删除，账号会自动退出登录状态。<br><br>感谢您长久以来的支持。]]></Data></string>
    <string name="tips" translatable="false">提示</string>
    <string name="exit" translatable="false">是否确认退出？</string>
    <string name="live_goods_name" translatable="false">小火苗福利社</string>
</resources>
